@@ -72,7 +72,7 @@ class ReceiptServiceTest {
         // Assert
         assertThat(result).isNotNull();
         assertThat(result.size()).isEqualTo(2);
-        assertThat(result.get(0).id()).isEqualTo(1);
+        assertThat(result.getFirst().id()).isEqualTo(1);
         assertThat(result.get(1).id()).isEqualTo(2);
     }
 
